--- a/templates/base_template/addrequest.html
+++ b/templates/base_template/addrequest.html
@@ -83,7 +83,7 @@ function gr_listener(){
 
 <div class="breadcrumb-container">
 	<ul class="breamcrumb">
-		<li><a href="{EQDKP_CONTROLLER_PATH}{SID}" title="{L_home}"><i class="icon-home"></i></a></li>
+		<li><a href="{EQDKP_CONTROLLER_PATH}{SID}" title="{L_home}"><i class="fa fa-home"></i></a></li>
 		<li class="current"><a>{L_gr_add}</a></li>
 	</ul>
 	<div class="clear"></div>
@@ -125,15 +125,15 @@ function gr_listener(){
 				<dt>
 					<label>{L_lib_captcha_head} *</label><br /><span>{L_lib_captcha_insertword}</span>
 				</dt>
-				<dd><div id="recaptcha_image" style="float:left; cursor:pointer;" onclick="javascript:Recaptcha.reload();" title="{L_lib_captcha_reload}"></div><i class="icon-refresh icon-large hand" onclick="javascript:Recaptcha.reload();" title="{L_lib_captcha_reload}" style="float: none; margin-left: 20px; padding-top: 40px;vertical-align: middle;"></i><div style="clear:both;"></div>
+				<dd><div id="recaptcha_image" style="float:left; cursor:pointer;" onclick="javascript:Recaptcha.reload();" title="{L_lib_captcha_reload}"></div><i class="fa fa-refresh fa-lg hand" onclick="javascript:Recaptcha.reload();" title="{L_lib_captcha_reload}" style="float: none; margin-left: 20px; padding-top: 40px;vertical-align: middle;"></i><div style="clear:both;"></div>
 				<input name="recaptcha_response_field" type="text" id="recaptcha_response_field" style="width:300px; margin-top:5px;" class="input"/>
 				{FV_CAPTCHA}
 				{CAPTCHA}</dd>
 			</dl>
 		</fieldset>
 	</div>
-	<button type="submit" name="save"><i class="icon-ok"></i>{L_gr_submit_request}</button>
-	<button type="reset"><i class="icon-trash"></i>{L_reset}</button>
+	<button type="submit" name="save"><i class="fa fa-check"></i>{L_gr_submit_request}</button>
+	<button type="reset"><i class="fa fa-trash-o"></i>{L_reset}</button>
 	
 {CSRF_TOKEN}
 </form>
