--- a/templates/base_template/listrequests.html
+++ b/templates/base_template/listrequests.html
@@ -1,6 +1,6 @@
 <div class="breadcrumb-container">
 	<ul class="breamcrumb">
-		<li><a href="{EQDKP_CONTROLLER_PATH}{SID}" title="{L_home}"><i class="icon-home"></i></a></li>
+		<li><a href="{EQDKP_CONTROLLER_PATH}{SID}" title="{L_home}"><i class="fa fa-home"></i></a></li>
 		<li class="current"><a>{L_gr_view}</a></li>
 	</ul>
 	<div class="clear"></div>
@@ -17,10 +17,10 @@
 	</div>
 	
 	<!-- IF S_GR_ADMIN -->
-	<button class="mainoption bi_delete"  onclick="delete_warning();" type="button" name="del"><i class="icon-remove"></i>{L_gr_delete_selected_requests}</button>
+	<button class="mainoption bi_delete"  onclick="delete_warning();" type="button" name="del"><i class="fa fa-times"></i>{L_gr_delete_selected_requests}</button>
 	<input type="hidden" name="del" value="1" disabled="disabled" id="mass_del_submit" />
 	<!-- ENDIF -->
-	<button type="submit" name="mark_all_read" class="floatRight"><i class="icon-check"></i>{L_gr_mark_all_as_read}</button>
+	<button type="submit" name="mark_all_read" class="floatRight"><i class="fa fa-check-square-o"></i>{L_gr_mark_all_as_read}</button>
 	<div class="clear"></div>
 {CSRF_TOKEN}
 </form>
