some small fixes

--- a/templates/base_template/viewrequest.html
+++ b/templates/base_template/viewrequest.html
@@ -9,7 +9,7 @@
 	<ul class="breamcrumb">
 		<li><a href="{EQDKP_CONTROLLER_PATH}{SID}" title="{L_home}"><i class="fa fa-home"></i></a></li>
 		<!-- IF not S_EXTERNAL_USER -->
-		<li><a href="{EQDKP_CONTROLLER_PATH}/Listapplications/{SID}">{L_gr_view}</a></li>
+		<li><a href="{EQDKP_CONTROLLER_PATH}Listapplications{SEO_EXTENSION}{SID}">{L_gr_view}</a></li>
 		<!-- ENDIF -->
 		<li class="current"><a>{L_gr_viewrequest}: {GR_DATE}, {GR_USERNAME}</a></li>
 	</ul>
