--- a/templates/base_template/viewrequest.html
+++ b/templates/base_template/viewrequest.html
@@ -58,7 +58,7 @@
 	<!-- IF S_IS_GR_ADMIN -->
 	<form method="post">
 		<fieldset class="settings">
-			<legend><img src="{EQDKP_IMAGE_PATH}global/admin_flag.png" alt="{L_admin}" /> {L_gr_manage_request}</legend>
+			<legend><span class="adminicon"></span> {L_gr_manage_request}</legend>
 			<dl>
 				<dt><label>{L_status}</label>
 				<br /><span>{L_gr_status_help}</span>
