- Installer now without external connections -> more privacy - Use svg logo where possible

--- a/templates/base_template/viewrequest.html
+++ b/templates/base_template/viewrequest.html
@@ -57,7 +57,7 @@
 	<div id="gr_request">
 	<!-- IF S_IS_GR_ADMIN -->
 	<form method="post">
-		<fieldset class="settings">
+		<fieldset class="settings mediumsettings">
 			<legend><span class="adminicon"></span> {L_gr_manage_request}</legend>
 			<dl>
 				<dt><label>{L_status}</label>
@@ -88,7 +88,7 @@
 		<div>
 			<!-- BEGIN fieldset -->
 
-			<fieldset class="settings gr_{tabs.fieldset.ID}">
+			<fieldset class="settings mediumsettings gr_{tabs.fieldset.ID}">
 				<legend>{tabs.fieldset.NAME}</legend>
 				<!-- BEGIN field -->
 				<dl id="{tabs.fieldset.field.ID}">
