new table class

--- a/templates/base_template/listrequests.html
+++ b/templates/base_template/listrequests.html
@@ -9,7 +9,7 @@
 	<h1 class="contentTitle">{L_gr_view}</h1>
 </div>
 <form method="post" action="{ACTION}" name="post">
-	<table width="100%" border="0" cellspacing="1" cellpadding="2" class="colorswitch">
+	<table class="table fullwidth colorswitch">
 		{PAGE_OUT}
 	</table>
 	<div class="center pagination_wrapper">
