--- a/templates/base_template/addrequest.html
+++ b/templates/base_template/addrequest.html
@@ -35,10 +35,59 @@ function gr_hide_target(target){
 
 var field_data = new Array();
 $(document).ready(function(){
+	
+	<!-- IF S_USERNAME_CHECK -->
+	
 	$("input[name^='gr_field'], select[name^='gr_field'], textarea[name^='gr_field']").on("change", function(){
 		gr_listener();
 	});
 	gr_listener();
+	
+	$('#gr_name').after('<i class="fa fa-check fa-lg icon-color-green" id="tick_username" style="display:none;"></i><span id="error_username" class="error-message-red" style="display:none;"><i class="fa fa-exclamation-triangle fa-lg"></i> '+{L_fv_username_alreadyuse|jsencode}+'</span>');
+	$('#gr_email').after('<i class="fa fa-check fa-lg icon-color-green" id="tick_mail" style="display:none;" ></i><span id="error_email" class="error-message-red" style="display:none;"><i class="fa fa-exclamation-triangle fa-lg"></i> '+{L_fv_email_alreadyuse|jsencode}+'</span>');
+	
+	$('#gr_name').change(function() {
+		var username = $(this).val();
+		if(username.length > 0){
+			$.post("{EQDKP_CONTROLLER_PATH}Register/{SID}&ajax=1{AJAXEXTENSION_USER}", { username: username }, function(result){
+				if(result == 'true'){
+					$("#error_username").hide();
+					$("#tick_username").show();
+				}else{
+					errortext	= $("#error_username").html();
+					$('#error_username').html(errortext.replace(new RegExp("\\{0\\}", "g"), username));
+					$("#tick_username").hide();
+					$("#error_username").show();
+				}
+			});
+		}else{
+			$("#tick_username").hide();
+			$("#error_username").hide();
+		}
+	});
+
+	$('#gr_email').change(function() {
+		var user_email = $(this).val();
+		if(user_email.length > 0){
+			$.post("{EQDKP_CONTROLLER_PATH}Register/{SID}&ajax=1{AJAXEXTENSION_USER}", { user_email: user_email }, function(result){
+				if(result == 'true'){
+					$("#error_email").hide();
+					$("#tick_mail").show();
+				}else{
+					errortext	= $("#error_email").html();
+					$('#error_email').html(errortext.replace(new RegExp("\\{0\\}", "g"), user_email));
+					$("#tick_mail").hide();
+					$("#error_email").show();
+				}
+			});
+		}else{
+			$("#tick_mail").hide();
+			$("#error_email").hide();
+		}
+	});
+	
+	<!-- ENDIF -->
+
 })
 
 function gr_listener(){
@@ -81,6 +130,14 @@ function gr_listener(){
 
 </script>
 
+<!-- IF S_USERNAME_CHECK -->
+<style>
+input[name='gr_name'], input[name='gr_email']{
+	width: 90% !important;
+}
+</style>
+<!-- ENDIF -->
+
 <div class="breadcrumb-container">
 	<ul class="breamcrumb">
 		<li><a href="{EQDKP_CONTROLLER_PATH}{SID}" title="{L_home}"><i class="fa fa-home"></i></a></li>
@@ -117,7 +174,7 @@ function gr_listener(){
 			<!-- END fieldset -->
 		</div>
 		<!-- END tabs -->
-	
+	<!-- IF S_DISPLAY_CATPCHA -->
 	<div id="captcha">
 		<fieldset class="settings">
 			<legend>{L_lib_captcha_head}</legend>
@@ -130,6 +187,7 @@ function gr_listener(){
 			</dl>
 		</fieldset>
 	</div>
+	<!-- ENDIF -->
 	<button type="submit" name="save"><i class="fa fa-check"></i>{L_gr_submit_request}</button>
 	<button type="reset"><i class="fa fa-trash-o"></i>{L_reset}</button>
 	
