fix breadcrumb require EQdkpPlus/core#51

--- a/templates/base_template/addrequest.html
+++ b/templates/base_template/addrequest.html
@@ -139,7 +139,7 @@ input[name='gr_name'], input[name='gr_email']{
 <!-- ENDIF -->
 
 <div class="breadcrumb-container">
-	<ul class="breamcrumb">
+	<ul class="breadcrumb">
 		<li><a href="{EQDKP_CONTROLLER_PATH}{SID}" title="{L_home}"><i class="fa fa-home"></i></a></li>
 		<li class="current"><a>{L_gr_add}</a></li>
 	</ul>
