--- a/templates/base_template/viewrequest.html
+++ b/templates/base_template/viewrequest.html
@@ -6,7 +6,7 @@
 </script>
 <!-- ENDIF -->
 <div class="breadcrumb-container">
-	<ul class="breamcrumb">
+	<ul class="breadcrumb">
 		<li><a href="{EQDKP_CONTROLLER_PATH}{SID}" title="{L_home}"><i class="fa fa-home"></i></a></li>
 		<!-- IF not S_EXTERNAL_USER -->
 		<li><a href="{EQDKP_CONTROLLER_PATH}Listapplications{SEO_EXTENSION}{SID}">{L_gr_view}</a></li>
