--- a/templates/base_template/admin/form.html
+++ b/templates/base_template/admin/form.html
@@ -72,7 +72,7 @@ $(document).ready(function(){
 
 <!-- IF S_NORMAL_HEADER -->
 <div class="breadcrumb-container">
-	<ul class="breamcrumb">
+	<ul class="breadcrumb">
 		<li><a href="{EQDKP_CONTROLLER_PATH}{SID}" title="{L_home}"><i class="fa fa-home"></i></a></li>
 		<li><a href="{EQDKP_ROOT_PATH}admin/{SID}">{L_menu_admin_panel}</a>
 		<li class="current"><a>{L_guildrequest}: {L_gr_manage_form}</a></li>
