use correct jquery document ready check

--- a/templates/base_template/addrequest.html
+++ b/templates/base_template/addrequest.html
@@ -34,7 +34,7 @@ function gr_hide_target(target){
 }
 
 var field_data = new Array();
-$(document).ready(function(){
+$(function(){
 	
 	<!-- IF S_USERNAME_CHECK -->
 	
