--- a/templates/base_template/admin/form.html
+++ b/templates/base_template/admin/form.html
@@ -65,7 +65,7 @@ function buildDepFieldDropdowns(){
 	})
 }
 
-$(document).ready(function(){
+$(function(){
 	buildDepFieldDropdowns();
 })
 </script>
