--- a/templates/base_template/viewrequest.html
+++ b/templates/base_template/viewrequest.html
@@ -1,6 +1,6 @@
 <!-- IF S_EXTERNAL_USER -->
 <script>
-	$(document).ready(function(){
+	$(function(){
 		$( "<input type='hidden' name='key' value='{EXTERNAL_KEY}' />" ).appendTo( "#comment_dataext" );
 	})
 </script>
