Use new captcha class

--- a/templates/base_template/addrequest.html
+++ b/templates/base_template/addrequest.html
@@ -178,13 +178,7 @@ input[name='gr_name'], input[name='gr_email']{
 	<div id="captcha">
 		<fieldset class="settings">
 			<legend>{L_lib_captcha_head}</legend>
-			<dl>
-				<dt>
-					<label>{L_lib_captcha_head} *</label>
-				</dt>
-				<dd>{FV_CAPTCHA}
-				{CAPTCHA}</dd>
-			</dl>
+			{CAPTCHA}
 		</fieldset>
 	</div>
 	<!-- ENDIF -->
