--- a/templates/base_template/admin/form.html
+++ b/templates/base_template/admin/form.html
@@ -80,7 +80,7 @@ $(function(){
 </div>
 <br />
 <form name="gr_settings" action="{ACTION}" method="post">
-	<table id="gr_form_table" class="table fullwidth colorswitch">
+	<table id="gr_form_table" class="table fullwidth colorswitch scrollable-x">
 		<thead>
 		<tr class="not-sortable">
 			<th width="10px"></th>
