--- a/templates/base_template/listrequests.html
+++ b/templates/base_template/listrequests.html
@@ -16,7 +16,7 @@
             
             <div id="fragment-open_requests">
                 
-        <table class="table fullwidth colorswitch">
+        <table class="table fullwidth colorswitch scrollable-x">
 		
             {PAGE_OUT_OPEN}
                
@@ -31,7 +31,7 @@
         <!-- IF SHOW_ARCHIVE -->
         <div id="fragment-archive">
                 
-        <table class="table fullwidth colorswitch">
+        <table class="table fullwidth colorswitch scrollable-x">
 		
             {PAGE_OUT_ARCHIVE}
                
