--- a/templates/base_template/myapplications.html
+++ b/templates/base_template/myapplications.html
@@ -5,7 +5,7 @@
 	<button type="submit" name="mark_all_read" class="floatRight"><i class="fa fa-check-square-o"></i>{L_gr_mark_all_as_read}</button>
 	<div class="clear"></div>
 	
-	<table class="table fullwidth colorswitch">
+	<table class="table fullwidth colorswitch  scrollable-x">
 		{PAGE_OUT}
 	</table>
 	<div class="center pagination_wrapper">
