Added Image Upload

--- a/templates/base_template/addrequest.html
+++ b/templates/base_template/addrequest.html
@@ -149,7 +149,7 @@ input[name='gr_name'], input[name='gr_email']{
 <div class="clear"></div>
 <!-- ENDIF -->
 
-<form method="post" action="">
+<form method="post" action="" enctype="multipart/form-data">
 	<!-- BEGIN tabs -->
 		<div>
 		
